--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,15 @@
-.App {
-  text-align: center;
+.axis--x text  {
+  font-family: 'Rubik', sans-serif;
+  font-size: 11px;
+  color: #6F777A;
+  fill: #6F777A;
+}
+.axis--x path {
+  stroke: #CDD6D9;
+  stroke-width: 1px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.legend rect.current {
+  stroke: #079FD1;
+  fill: #079FD1;
 }
